--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     { name: 'Rats of Wistar', start: '3:15 PM', duration: 114, type: 'game' },
                     { name: 'Formosa Tea', start: '5:03 PM', duration: 102, type: 'game' },
                     { name: 'Dinner', start: '6:45 PM', duration: 45, type: 'meal' },
-                    { name: 'Grand Austria Hotel', start: '7:30 PM', duration: 138, type: 'game' },
+                    { name: 'Dune Imperium: Uprising', start: '7:30 PM', duration: 150, type: 'game' },
                 ]
             },
             {
@@ -500,3 +500,4 @@
     </script>
 </body>
 </html>
+
